tests/ui/coroutine/gen_block.none.stderr
error: expected identifier, found reserved keyword `yield`
  --> $DIR/gen_block.rs:9:19
   |
LL |     let y = gen { yield 42 };
   |             ---   ^^^^^ expected identifier, found reserved keyword
   |             |
   |             while parsing this struct

error[E0422]: cannot find struct, variant or union type `gen` in this scope
  --> $DIR/gen_block.rs:6:13
   |
LL |     let x = gen {};
   |             ^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `gen` in this scope
  --> $DIR/gen_block.rs:9:13
   |
LL |     let y = gen { yield 42 };
   |             ^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `gen` in this scope
  --> $DIR/gen_block.rs:12:5
   |
LL |     gen {};
   |     ^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0422`.
